[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://gem/Gem.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://main/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=6]
[ext_resource path="res://enemy/Froggy.tscn" type="PackedScene" id=7]
[ext_resource path="res://touch_button.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57.75, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 306.5 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Gem = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="GemContainer" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -2.0
margin_bottom = 10.0

[node name="LabelScore" type="Label" parent="HUD/MarginContainer"]
margin_right = 468.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="LabelTimer" type="Label" parent="HUD/MarginContainer"]
margin_right = 468.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="LabelLevel" type="Label" parent="HUD/MarginContainer"]
margin_right = 468.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="GameOverLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = 274.0
margin_right = 240.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 2 )
text = "game over!"
align = 1
valign = 1

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="LevelUpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0

[node name="CherryTimer" type="Timer" parent="."]

[node name="Froggy" parent="." instance=ExtResource( 7 )]
position = Vector2( 157, 273 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 158, 305 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 3 )

[node name="Bounderies" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="Left" type="StaticBody2D" parent="Bounderies"]
position = Vector2( -13, 357 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounderies/Left"]
shape = SubResource( 4 )

[node name="Right" type="StaticBody2D" parent="Bounderies"]
position = Vector2( 492, 366 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounderies/Right"]
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
position = Vector2( 80, 640 )
rotation = -3.14159
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 8 )

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
position = Vector2( 112, 580 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 8 )

[node name="UpButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
position = Vector2( 68, 580 )
rotation = -1.5708
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 8 )

[node name="ButtomButton" type="TouchScreenButton" parent="CanvasLayer/ButtonContainer"]
position = Vector2( 128, 641 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 8 )

[connection signal="levelUp" from="." to="." method="_on_Main_levelUp"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="picked" from="Player" to="." method="_on_Player_picked"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="CherryTimer" to="." method="_on_CherryTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/LeftButton" to="Player" method="_on_LeftButton_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/LeftButton" to="Player" method="_on_LeftButton_released"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/RightButton" to="Player" method="_on_RightButton_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/RightButton" to="Player" method="_on_RightButton_released"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/UpButton" to="Player" method="_on_UpButton_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/UpButton" to="Player" method="_on_UpButton_released"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtomButton" to="Player" method="_on_ButtomButton_pressed"]
[connection signal="released" from="CanvasLayer/ButtonContainer/ButtomButton" to="Player" method="_on_ButtomButton_released"]
